# dataknead

./: .gitignore  LICENSE.txt  MANIFEST  README.md  data.csv  data.json  package-lock.json  package.json  pyproject.toml  setup.py  test.csv  test.json
dataknead/: README.md  __init__.py  api.py  baseloader.py  console.py  csvloader.py  jsonloader.py  knead.py  textloader.py
dataknead/loaders/: csv.py  csvloader.py  excel.py  json.py  jsonloader.py  text.py  toml.py  util.py  xml.py
docs/: .buildinfo  README.78e7bab3.html  api.html  api.rst  app.c328ef1a.css  app.c328ef1a.js  cli.html  cli.rst  conf.py  dev-info.html  extending.html  extending.rst  genindex.html  index.html  index.rst  objects.inv  release-history.html  release-history.rst  search.html  searchindex.js  style.a6dae8f7.css
docs-src/: Makefile  api.rst  app.js  conf.py  dev-info.rst  index.html
docs-src/_static/: custom.css
docs-src/scss/: _base.scss  _values.scss  style.scss
docs/_modules/: index.html
docs/_modules/dataknead/: knead.html
docs/_modules/dataknead/loaders/: csv.html  excel.html  json.html  text.html  toml.html  xml.html
docs/_sources/: cli.rst.txt  index.rst.txt
etc/: dataknead
tests/: advanced_example.py  api_examples.py  basic_example.py  compare.py  context.py  cookbook.py  excel_example.py  lead_example.py  performance_test.py  run-all.sh  test.py  test2.py  toml_example.py  xml_example.py  yaml_example.py  yamlloader.py
tests/data/: .gitignore  entity.json
tests/input/: .gitignore  books.xml  cities-multisheet.xlsx  cities.csv  cities.xlsx  entity.json  example.yaml  names.json
